# AKR_3D_map

./: .gitignore  README.md  _quarto.yml  index.qmd  pyproject.toml  references.bib  requirements.txt
.github/workflows/: quarto-publish.yml
_freeze/index/execute-results/: html.json
assets/3D_Objects/: 02_cartesian_grid_with_residence_time.json  cartesian_grid_with_observation_time.json  cartesian_grid_with_observations_time.json  cartesian_grid_with_residence_time.json  ltrm_lat_grid.json
data_pipeline/: 00_description_TFCat_dataformat.md  01_csv_to_tfcat.py  README.md  config.yaml  converter.py  run_all.sh
docs/: index.html  search.json
docs/site_libs/bootstrap/: bootstrap-dark-014c46cd5388cf8980e48469648d8535.min.css
notebooks/: 00_All.ipynb  03_Importing_Data_in_correct_format.ipynb  try.ipynb
scripts/: 00_Testing_Packages.py  01_3D_Visualisation.py  10_all.py  base_class.py  calculations.py  grid_3d.py  grid_3d_copy.py  grid_3d_old.py  types.py  utils.py  variables.py  wind_data_reading.py
scripts/mixins/: observation_time.py
