[project]
name = "akr-3d-map"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "astropy>=7.2.0",
    "ipykernel>=7.1.0",
    "ipython>=9.9.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.4",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pip>=25.3",
    "plotly>=6.5.0",
    "pyvista>=0.46.4",
    "requests>=2.32.5",
    "scipy>=1.16.3",
    "xarray>=2025.12.0",
]
